examples/test/testpolicy14557.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14557
  namespace: namespace189
spec:
  podSelector:
    matchLabels:
      key5: value32
      key25: value3
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key35: value48
          key7: value4
          key40: value28
      podSelector:
        matchLabels:
          key2: value13
